--- a/EatSmart/app/src/main/res/layout/activity_resto_edit.xml
+++ b/EatSmart/app/src/main/res/layout/activity_resto_edit.xml
@@ -6,13 +6,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.jerem.eatsmart.resto_edit"
-    android:background="#da0101">
+    android:background="@drawable/ro_signup_3">
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageButton6"
-        android:src="@drawable/signup_bt"
+        android:src="@drawable/next_bt"
         android:background="#00ffffff"
         android:maxHeight="120dp"
         android:maxWidth="120dp"
@@ -25,8 +25,8 @@
         android:layout_alignEnd="@+id/button12" />
 
     <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:id="@+id/imageView8"
         android:foreground="#00ffffff"
         android:scaleType="fitXY"
@@ -71,13 +71,13 @@
                 android:textColor="#ffffff" />
 
             <EditText
-                android:layout_width="match_parent"
+                android:layout_width="275dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/editText3"
                 android:layout_above="@+id/textView3"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
-                android:background="#ffffff" />
+                android:background="@drawable/border" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -91,7 +91,7 @@
                 android:layout_gravity="center_horizontal" />
 
             <EditText
-                android:layout_width="369dp"
+                android:layout_width="275dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/editText11"
                 android:layout_below="@+id/textView7"
@@ -99,7 +99,7 @@
                 android:layout_alignStart="@+id/editText6"
                 android:layout_alignRight="@+id/editText6"
                 android:layout_alignEnd="@+id/editText6"
-                android:background="#ffffff"
+                android:background="@drawable/border"
                 android:inputType="phone"
                 android:layout_gravity="center_horizontal" />
 
@@ -124,7 +124,8 @@
                 android:layout_above="@+id/editText16"
                 android:layout_alignTop="@+id/textView22"
                 android:layout_centerHorizontal="true"
-                android:layout_gravity="center_horizontal" >
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/border">
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -136,7 +137,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -148,7 +149,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -160,7 +161,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -169,7 +170,7 @@
                     android:id="@+id/checkBox17"
                     android:layout_row="1"
                     android:layout_column="1"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:elegantTextHeight="false"
                     android:enabled="true"
                     android:allowUndo="true"
@@ -185,7 +186,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -197,7 +198,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -209,7 +210,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -221,7 +222,7 @@
                     android:allowUndo="true"
                     android:clickable="true"
                     android:enabled="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
 
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -233,7 +234,7 @@
                     android:allowUndo="true"
                     android:enabled="true"
                     android:clickable="true"
-                    android:textColor="#ffffff" />
+                    android:textColor="#000000" />
             </GridLayout>
 
             <TextView
@@ -245,7 +246,8 @@
                 android:layout_alignTop="@+id/imageButton2"
                 android:layout_alignLeft="@+id/imageButton2"
                 android:layout_alignStart="@+id/imageButton2"
-                android:layout_gravity="center_horizontal" />
+                android:layout_gravity="center_horizontal"
+                android:textColor="#ffffff" />
 
             <RadioGroup
                 android:layout_width="wrap_content"
@@ -253,36 +255,37 @@
                 android:id="@+id/radioGroup9"
                 android:orientation="horizontal"
                 android:layout_below="@+id/textView20"
-                android:layout_centerHorizontal="true">
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/border">
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_budget_1"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton40"
-                    />
+                    android:textSize="13dp" />
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_budget_2"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton41"
 
-                    />
+                    android:textSize="13dp" />
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_budget_3"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton42"
-                    />
+                    android:textSize="13dp" />
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_budget_4"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton43"
-                    />
+                    android:textSize="13dp" />
             </RadioGroup>
             <TextView
                 android:layout_width="wrap_content"
@@ -301,12 +304,14 @@
                 android:layout_below="@+id/textView37"
                 android:layout_centerHorizontal="true"
                 android:gravity="center_vertical"
-                android:id="@+id/radioGroup10">
+                android:id="@+id/radioGroup10"
+                android:background="@drawable/border"
+                android:layout_gravity="center_horizontal">
                 <RadioButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_1"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton44"
                     />
 
@@ -314,7 +319,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_2"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton45"
                     />
 
@@ -322,7 +327,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_3"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton46"
                     />
 
@@ -330,7 +335,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_4"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton47"
                     />
 
@@ -338,7 +343,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_5"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton48"
                     />
 
@@ -346,7 +351,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/text_location_6"
-                    android:textColor="#ffffff"
+                    android:textColor="#000000"
                     android:id="@+id/radioButton49"
                     />
             </RadioGroup>
