--- a/EatSmart/app/src/main/res/layout/activity_true_home_restau.xml
+++ b/EatSmart/app/src/main/res/layout/activity_true_home_restau.xml
@@ -22,9 +22,8 @@
         android:scaleType="fitXY"
         android:background="@null"
         android:layout_alignTop="@+id/button17"
-        android:layout_toLeftOf="@+id/button17"
-        android:layout_toStartOf="@+id/button17"
-        android:layout_marginRight="50dp" />
+        android:layout_toLeftOf="@+id/textView64"
+        android:layout_toStartOf="@+id/textView64" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -39,11 +38,10 @@
         android:maxWidth="120dp"
         android:minHeight="120dp"
         android:minWidth="120dp"
-        android:layout_marginBottom="130dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="45dp" />
+        android:layout_above="@+id/textView64"
+        android:layout_toRightOf="@+id/textView64"
+        android:layout_toEndOf="@+id/textView64"
+        android:layout_marginBottom="100dp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -54,7 +52,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:adjustViewBounds="true"
-        android:layout_marginTop="50dp" />
+        android:layout_marginTop="70dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -66,4 +64,13 @@
         android:layout_marginBottom="52dp"
         android:layout_above="@+id/button16"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView64"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible" />
 </RelativeLayout>
