--- a/EatSmart/app/src/main/res/layout/activity_details_restaurant_2.xml
+++ b/EatSmart/app/src/main/res/layout/activity_details_restaurant_2.xml
@@ -315,6 +315,39 @@
                     android:textColor="#000000"
                     android:id="@+id/radioButton12" />
             </RadioGroup>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:id="@+id/textView65"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#ffffff"
+                android:layout_below="@+id/editText10"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp" />
+
+            <EditText
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/editText12"
+                android:background="@drawable/border"
+                android:layout_gravity="center_horizontal"
+                android:layout_below="@+id/textView25"
+                android:layout_alignRight="@+id/editText4"
+                android:layout_alignEnd="@+id/editText4"
+                android:layout_alignLeft="@+id/editText4"
+                android:layout_alignStart="@+id/editText4"
+                android:focusable="true" />
+
+            <ImageButton
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:id="@+id/imageButton11"
+                android:layout_gravity="center_horizontal"
+                android:scaleType="fitXY"
+                android:src="@drawable/select_images" />
+
         </LinearLayout>
     </ScrollView>
 
