--- a/EatSmart/app/src/main/res/layout/activity_search_result.xml
+++ b/EatSmart/app/src/main/res/layout/activity_search_result.xml
@@ -64,6 +64,12 @@
             android:layout_alignParentStart="true"
             android:paddingTop="10dp" >
 
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/imageView19"
+                android:layout_gravity="center_horizontal" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
