--- a/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
@@ -105,30 +105,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description"
-        android:id="@+id/textView25"
-        android:layout_gravity="center_horizontal"
-        android:textColor="#ffffff"
-        android:layout_below="@+id/editText10"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp" />
-
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText6"
-        android:background="@drawable/border"
-        android:layout_gravity="center_horizontal"
-        android:layout_below="@+id/textView25"
-        android:layout_alignRight="@+id/editText4"
-        android:layout_alignEnd="@+id/editText4"
-        android:layout_alignLeft="@+id/editText4"
-        android:layout_alignStart="@+id/editText4"
-        android:focusable="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="Contact No."
         android:id="@+id/textView7"
         android:layout_below="@+id/editText4"
@@ -141,12 +117,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/editText10"
         android:layout_below="@+id/textView7"
-        android:layout_alignLeft="@+id/editText6"
-        android:layout_alignStart="@+id/editText6"
-        android:layout_alignRight="@+id/editText6"
-        android:layout_alignEnd="@+id/editText6"
         android:background="@drawable/border"
         android:inputType="phone"
-        android:focusable="true" />
+        android:focusable="true"
+        android:layout_alignLeft="@+id/editText4"
+        android:layout_alignStart="@+id/editText4"
+        android:layout_alignRight="@+id/editText4"
+        android:layout_alignEnd="@+id/editText4" />
 
 </RelativeLayout>
