--- a/EatSmart/app/src/main/res/layout/activity_details_restaurant_2.xml
+++ b/EatSmart/app/src/main/res/layout/activity_details_restaurant_2.xml
@@ -346,7 +346,8 @@
                 android:id="@+id/imageButton11"
                 android:layout_gravity="center_horizontal"
                 android:scaleType="fitXY"
-                android:src="@drawable/select_images" />
+                android:src="@drawable/select_images"
+                android:background="#00ffffff" />
 
         </LinearLayout>
     </ScrollView>
