--- a/EatSmart/app/src/main/res/layout/activity_search_result.xml
+++ b/EatSmart/app/src/main/res/layout/activity_search_result.xml
@@ -52,7 +52,8 @@
         android:layout_gravity="right|left"
         android:layout_below="@+id/textView23"
         android:layout_alignParentRight="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/button13">
 
         <LinearLayout
             android:id="@+id/linearLayout2"
