--- a/EatSmart/app/src/main/res/layout/activity_resto_edit.xml
+++ b/EatSmart/app/src/main/res/layout/activity_resto_edit.xml
@@ -8,21 +8,6 @@
     tools:context="com.example.jerem.eatsmart.resto_edit"
     android:background="@drawable/ro_signup_3">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageButton6"
-        android:src="@drawable/next_bt"
-        android:background="#00ffffff"
-        android:maxHeight="120dp"
-        android:maxWidth="120dp"
-        android:minHeight="120dp"
-        android:minWidth="120dp"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,12 +15,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/imageButton6">
+        android:layout_gravity="center"
+        android:layout_above="@+id/button8">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
             <ImageView
                 android:layout_width="100dp"
@@ -363,7 +350,8 @@
                 android:text="Select Menu Pics"
                 android:id="@+id/button5"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/select_images" />
+                android:src="@drawable/select_images"
+                android:background="#00ffffff" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -373,4 +361,13 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SAVE"
+        android:id="@+id/button8"
+        android:layout_alignParentTop="false"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
