--- a/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
+++ b/EatSmart/app/src/main/res/layout/content_details_restaurant.xml
@@ -100,7 +100,8 @@
         android:scaleType="fitXY"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
